# EchoGraph

./: .gitignore  .markdownlint.json  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  DEFINITION-OF-READY.md  INITIAL.md  PLANNING-v2.md  PLANNING.md  PRODUCT-OWNER-GUIDE.md  TASK.md  settings.local.json
.claude/agents/: implementation-guide.md  research-expert.md  story-expert.md
.claude/commands/: archive-prp.md  create-feature-request.md  execute-prp.md  generate-prp.md  refactor-simple.md  research.md  validate-story-ready.md  validate-tasks.md  write-user-story.md
.claude/docs/: story-commands-quick-reference.md  story-workflow-guide.md  three-amigos-guide.md
.claude/tasks/: README.md  TASK-001-example-feature.md  TASK-002-context-engineering-cli.md
.claude/templates/: story-to-initial.md  technical-story-template.md  user-story-template.md
PRPs/: PRODUCT-OWNER-INTEGRATION-PLAN.md  README.md
PRPs/active/: context-engineering-cli.md
PRPs/ai_docs/: README.md  expo.md  react-native.md  react-query.md  tamagui.md  zustand.md
PRPs/completed/: context-engineering-cli-PRP.md
PRPs/feature-requests/: agentic-workflow-architecture-PROPOSAL.md  context-engineering-cli.md  (+3 more)
docs/: CONTEXT_ENGINEERING_QUICKSTART.md  CONTEXT_ENGINEERING_REUSABILITY_GUIDE.md  CUSTOMIZATION_GUIDE.md  DEFINITION-OF-READY.md  ECHOGRAPH-IMPLEMENTATION-PLAN.md  INITIAL-VS-PLANNING.md  PLATFORM-VISION.md  PRODUCT-OWNER-GUIDE.md  SETUP_GUIDE.md  UNIFIED-VISION.md  USER_GUIDE.md  WORKFLOW_GUIDE.md
scripts/: sync-cli-templates.py
user-stories/: README.md
(+107 files in other folders)
